--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
 body{
     background-color: aqua;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 200;
 }
 
 .menu{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    margin:2rem;
+}
 
+.item{
+    display: flex;
+    gap: 10px;
 }
