--- a/style.css
+++ b/style.css
@@ -15,3 +15,10 @@ body{
     display: flex;
     gap: 10px;
 }
+#minta{
+    width: 60%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
