--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,4 +1,4 @@
-body {
+body, html {
   margin: 0;
   font-family: monospace, Helvetica, sans-serif;
   font-weight: 200;
@@ -34,27 +34,13 @@ body button {
   text-align: center;
 }
 
-#boritokep {
-  opacity: 80%;
-}
+
 .centered {
   top: 50%;
   bottom: 50%;
   transform: translate(-50%, -50%);
 }
-#minta {
-  width: 80%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-.bg-img {
-  background-image: url("../képek/planner.jpg");
-  min-height: 380px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+
 .form {
   right: 0;
   margin: 20px;
@@ -90,4 +76,55 @@ input[type="password"]:focus {
 
 .login:hover {
   opacity: 1;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.bg-image {
+  height: 80%; 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.img1 { background-image: url("../képek/kavezok.jpg"); }
+.img2 { background-image: url("../képek/bike.jpg"); }
+.img3 { background-image: url("../képek/sulyzok.jpg"); }
+.img4 { background-image: url("../képek/kocsma.jpg"); }
+.img5 { background-image: url("../képek/futas.jpg"); }
+
+.bg-text {
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0, 0.7); 
+  color: #fff;
+  font-weight: bold;
+  font-size: 27px;
+  border: 10px solid #e3fc02;
+  position: fixed; 
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 70%;
+  height: 60%;
+  padding: 30px 30px;
+  
+}
+#use{
+  font-size: 36px;
+  text-align: center;
+  margin-left: 25px;
+  margin-right: 25px;;
+}
+#ingyen{
+  color: red;
+}
+
+footer{
+  font-family: monospace;
+  font-size: 15px;
+  color:#e3fc02;
+  padding: 30px 30px;
 }
