--- a/Styles/nav.css
+++ b/Styles/nav.css
@@ -1,24 +1,25 @@
 .topnav {
   position: fixed;
+  display: flex;
   top: 0;
   width: 100%;
   background-color: #1f1f21;
   overflow: hidden;
+  height: 3.5rem;
 }
 
 .topnav a {
+  display: inline-block;
   padding: 16px 22px;
   text-align: center;
   text-decoration: none;
   font-size: 17px;
   font-weight: bold;
   color: #e3fc02;
-}
-#left {
-  float: left;
+  height: 100%;
 }
 #right {
-  float: right;
+  margin-left: auto;
 }
 
 .topnav a:hover {
@@ -32,9 +33,13 @@
 }
 
 .logo{
+  text-align: center;
   color: #e3fc02;
   font-family: monospace;
   font-weight: bold;
   font-size: 30px;
-  margin-top: 200px;
+  width: fit-content;
+  margin: 2rem;
+  margin-top: auto;
+  margin-bottom: auto;
 }
