--- a/Styles/style.css
+++ b/Styles/style.css
@@ -49,6 +49,14 @@ body button {
   background-size: cover;
   
 }
+.bg-signup{
+  background-image: url(../képek/bike2.jpg);
+  min-height: 700px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+}
 .form {
   float: right;
   right: 0;
@@ -64,7 +72,7 @@ body button {
 
 input[type="text"],
 input[type="password"] {
-  width: 92%;
+  width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
   border: none;
