--- a/Styles/style.css
+++ b/Styles/style.css
@@ -119,20 +119,20 @@ input[type="password"]:focus {
   background-color: rgba(0,0,0, 0.7); 
   color: #fff;
   font-weight: bold;
-  font-size: 27px;
-  border: 10px solid #e3fc02;
+  font-size: 1rem;
+  border: 0.5rem solid #e3fc02;
   position: fixed; 
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
-  width: 70%;
-  height: 60%;
-  padding: 30px 30px;
+  width: 24rem;
+  height: 23rem;
+  padding: 0.8rem 0.8rem;
   
 }
 #use{
-  font-size: 36px;
+  font-size: 1.2rem;
   text-align: center;
   margin-left: 25px;
   margin-right: 25px;;
