--- a/Styles/style.css
+++ b/Styles/style.css
@@ -83,6 +83,20 @@ input[type="password"]:focus {
   background-color: #ddd;
   outline: none;
 }
+
+fieldset{
+  border-color: #1f1f21;
+}
+.rButton {
+  background-color: gray;
+  color: #e3fc02;
+  cursor: pointer;
+  opacity: 0.9;
+  margin-top: 0.5rem;
+
+
+}
+
 .login {
   background-color: #e3fc02;
   color: #1f1f21;
@@ -140,4 +154,5 @@ input[type="password"]:focus {
 #ingyen{
   color: red;
 }
+
 
