--- a/Styles/style.css
+++ b/Styles/style.css
@@ -64,6 +64,16 @@ body button {
   padding: 0.8rem 0.8rem;
   
 }
+
+table{
+  text-align: center;
+  border-color: #fff;
+
+}
+table th, td{
+  text-align: center;
+}
+
 #use{
   font-size: 1.2rem;
   text-align: center;
