--- a/Styles/nav.css
+++ b/Styles/nav.css
@@ -5,7 +5,7 @@
 nav ul {
   list-style-type: none;
   padding: 0;
-  height: 100% ;
+  height: 100%;
   display: flex;
   justify-content: center;
 }
@@ -17,36 +17,51 @@ nav ul {
   width: 100%;
   background-color: var(--fekete);
   overflow: hidden;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .ham {
   display: none;
 }
-
-
-.topnav a {
+.topnav li {
   padding: 1rem 1.4rem;
+  height: 3.5rem;
+  position: relative;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.topnav li.active::after {
+  width: 100%;
+}
+.topnav a {
+  margin: 0 auto;
+  display: block;
   text-align: center;
   text-decoration: none;
-  font-size: 1rem;
-  font-weight: bold;
+  font-size: 1.5rem;
+  font-weight: 500;
   color: var(--sarga);
-  height: 3.5rem;
+}
+.topnav li::after {
+  position: absolute;
+  content: "";
+  bottom: 0px;
+  left: 0;
+  background-color: var(--sarga);
+  width: 0;
+  height: 2px;
+  margin: 0 auto;
+}
+.topnav li:hover::after {
+  width: 100%;
+  transition: width .3s ease-in-out;
 }
 
-
-.topnav a:hover {
-  background-color: gray !important;
-  color: var(--sarga) !important;
-}
-
-.topnav a:is(:link, :active, :visited).currant {
+.topnav li:is(:link, :active, :visited).currant {
   background-color: gray;
   color: var(--sarga);
-}
-
-.topnav a.active {
-  background-color: var(--sarga);
-  color: var(--fekete);
 }
 
 .logo {
@@ -60,8 +75,12 @@ nav ul {
 
 @media screen and (max-width: 700px) {
   .topnav {
+    position: fixed;
     flex-direction: column;
-    height: fit-content;
+    justify-content: start;
+    height: max-content;
+    z-index: 10;
+    padding: 0;
   }
   .logo {
     margin-left: 1rem !important;
@@ -83,23 +102,37 @@ nav ul {
     justify-content: space-between;
     flex-direction: row !important;
     height: fit-content;
-    width:100%;
-    margin: auto;
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+  ul:nth-child(2) {
+    margin-top: 2rem;
+  }
+  ul:not(:first-child) {
+    flex-direction: column;
+    height: fit-content;
+    margin: 0;
+  }
+  ul:last-child {
+    margin-bottom: 100%;
+  }
+  .topnav li {
+    margin: 1.5rem auto;
   }
 }
-@media screen and (min-width:700px){
-  ul:first-child{
+@media screen and (min-width: 700px) {
+  ul:first-child {
     display: none;
   }
 }
-@media screen and (min-width:800px){
-  ul:first-child{
+@media screen and (min-width: 800px) {
+  ul:first-child {
     display: block;
-    order:1;
+    order: 1;
     margin: auto;
   }
-  ul:last-child{
-    order:2;
+  ul:last-child {
+    order: 2;
   }
 }
 .invisible {
