--- a/Styles/style.css
+++ b/Styles/style.css
@@ -42,10 +42,10 @@ body button {
 }
 
 .img1 { background-image: url("../képek/kavezok.jpg"); }
-.img2 { background-image: url("../képek/bike.jpg"); }
+.img2 { background-image: url("../képek/bike2.jpg"); }
 .img3 { background-image: url("../képek/sulyzok.jpg"); }
 .img4 { background-image: url("../képek/kocsma.jpg"); }
-.img5 { background-image: url("../képek/futas.jpg"); }
+.img5 { background-image: url("../képek/futas2.jpg"); }
 
 .bg-text {
   background-color: rgb(0,0,0); 
