--- a/Styles/style.css
+++ b/Styles/style.css
@@ -67,16 +67,33 @@ body button {
 
 table{
   text-align: center;
-  border-color: #fff;
+  border-collapse: collapse;
+  padding: 20px;
+  margin: 0;
+
 
 }
 table th{
   vertical-align: middle;
   color: red;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #e3fc02;
+  height: 2.5rem;
+  
+  
+ 
 }
 
 table td{
   vertical-align: left;
+  color: #fff;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #e3fc02;
+  padding-right: 5px;
+  height: 6rem;
+  
 }
 
 #use{
