--- a/1.mérföldkő/Styles/style.css
+++ b/1.mérföldkő/Styles/style.css
@@ -47,6 +47,11 @@ body button {
 .img4 { background-image: url("../képek/kocsma.jpg"); }
 .img5 { background-image: url("../képek/futas2.jpg"); }
 
+.gimg1 { background-image: url("../képek/chill.jpg"); }
+.gimg2 { background-image: url("../képek/pár.jpg"); }
+.gimg3 { background-image: url("../képek/tasks-g114362388_1920.jpg"); }
+.gimg4 { background-image: url("../képek/coffee-gc0ac3039f_1920.jpg"); }
+
 .bg-text {
   background-color: rgb(0,0,0); 
   background-color: rgba(0,0,0, 0.7); 
