--- a/1.mérföldkő/Styles/nav.css
+++ b/1.mérföldkő/Styles/nav.css
@@ -11,7 +11,8 @@ nav ul {
   margin: 0;
 }
 .topnav {
-  position: fixed;
+  position: sticky;
+  z-index: 100;
   display: flex;
   justify-content: space-between;
   top: 0;
