--- a/1.mérföldkő/Styles/style.css
+++ b/1.mérföldkő/Styles/style.css
@@ -49,7 +49,7 @@ body button {
 
 .gimg1 { background-image: url("../képek/chill.jpg"); }
 .gimg2 { background-image: url("../képek/pár.jpg"); }
-.gimg3 { background-image: url("../képek/tasks-g114362388_1920.jpg"); }
+.gimg3 { background-image: url("../képek/task2.jpg"); }
 .gimg4 { background-image: url("../képek/coffee-gc0ac3039f_1920.jpg"); }
 
 .bg-text {
