--- a/1.mérföldkő/Styles/cards.css
+++ b/1.mérföldkő/Styles/cards.css
@@ -16,7 +16,7 @@
   cursor: pointer;
   display: flex;
   height: 460px;
-  width: 500px;
+  width: 30rem;
   flex-direction: column;
   position: relative;
 }
