--- a/1.mérföldkő/Styles/footer.css
+++ b/1.mérföldkő/Styles/footer.css
@@ -4,5 +4,7 @@ footer{
     color:#e3fc02;
     padding-right: 2rem;
     display: flex;  
+    margin-bottom: 5rem;
+    margin-left: 2rem;
   }
   
