--- a/1.mérföldkő/Styles/cards.css
+++ b/1.mérföldkő/Styles/cards.css
@@ -4,6 +4,7 @@
   flex-wrap: wrap;
   gap: 12px;
   width: fit-content;
+  justify-content: center;
 }
 
 #cards:hover > .card::after {
@@ -15,8 +16,8 @@
   border-radius: 15px;
   cursor: pointer;
   display: flex;
-  height: 460px;
   width: 30rem;
+  aspect-ratio: 1;
   flex-direction: column;
   position: relative;
 }
@@ -90,4 +91,12 @@
   font-size: 2.25rem;
   font-weight: 400;
   margin-top: 3rem;
+}
+@media screen and (max-width:700px) {
+  .card {
+    width: 100%;
+  }
+  #cards {
+    width: 100%;
+  }
 }
