--- a/1.mérföldkő/Styles/hero.css
+++ b/1.mérföldkő/Styles/hero.css
@@ -11,10 +11,18 @@
   transform-origin: 0 0;
   left: 20%;
 }
+.hero-text h1{
+  width: 50%
+}
+.hero-text p{
+  width: 50%
+}
+
 .hero-image {
   opacity: 0.7;
   width: 100%;
   height: 100vh;
+  object-fit: cover;
 }
 
 .text-container {
@@ -30,5 +38,23 @@
   margin-bottom: 1rem;
 }
 .text-container p{
-    font-size: 1.25rem"
+    font-size: 1.25rem;
 }
+
+@media screen and (max-width:700px) {
+  .hero-text{
+    font-size: 1.3rem;
+    width: 90%;
+    left: 5%;
+  }
+  .hero-text h1{
+    width: 90%;
+  }
+  .text-container{
+    left: 40%;
+  }
+  .text-container h2{
+    font-size: 2rem;
+  }
+}
+
