--- a/1.mérföldkő/Styles/form.css
+++ b/1.mérföldkő/Styles/form.css
@@ -15,7 +15,7 @@
 .form {
   float: right;
   right: 0;
-  margin-top: 3rem;
+  margin-top: 6rem;
   margin-bottom: 5rem;
   margin-right: 1.3rem;
   max-width: 350px;
@@ -75,4 +75,10 @@ fieldset {
 
 .login:hover {
   opacity: 1;
+}
+@media screen and (max-width: 700px) {
+
+
+
+
 }
