--- a/1.mérföldkő/Styles/hero.css
+++ b/1.mérföldkő/Styles/hero.css
@@ -3,17 +3,17 @@
   position: relative;
 }
 .hero-text {
-  font-size: 1.75rem;
+  font-size: 1.7rem;
   position: absolute;
   color: white;
-  width: 75%;
+  width: 80%;
   transform-origin: 0 0;
-  top: 15%;
+  top: 10%;
   animation-name: myMove;
-  animation-duration: 3s;
+  animation-duration: 2s;
   animation-iteration-count: 1;
   animation-timing-function: ease;
-  
+  animation-fill-mode: forwards;
 }
 
 @keyframes myMove {
@@ -56,6 +56,7 @@
     font-size: 1.3rem;
     width: 90%;
     left: 5%;
+    top: 20%;
   }
   .hero-text h1{
     width: 90%;
