--- a/1.mérföldkő/Styles/cards.css
+++ b/1.mérföldkő/Styles/cards.css
@@ -17,57 +17,19 @@
   cursor: pointer;
   display: flex;
   width: 30rem;
-  aspect-ratio: 1;
+  aspect-ratio: 1/1;
   flex-direction: column;
   position: relative;
+  transition: ease-in-out;
+  transition-duration: 0.4s;
 }
 
-.card:hover::before {
-  opacity: 1;
-}
 
-.card::before,
-.card::after {
-  border-radius: inherit;
-  content: "";
-  height: 100%;
-  left: 0px;
-  opacity: 0;
-  position: absolute;
-  top: 0px;
-  transition: opacity 500ms;
-  width: 100%;
-}
-
-.card::before {
-  background: radial-gradient(
-    800px circle at var(--mouse-x) var(--mouse-y),
-    rgba(255, 255, 255, 0.06),
-    transparent 40%
-  );
+.card:hover {
+  background: rgba(255, 255, 255, 0.5);
   z-index: 3;
 }
 
-.card::after {
-  background: radial-gradient(
-    400px circle at var(--mouse-x) var(--mouse-y),
-    rgba(255, 255, 255, 0.2),
-    transparent 30%
-  );
-  z-index: 1;
-}
-
-.card > .card-content {
-  background-color: var(--card-color);
-  border-radius: inherit;
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  inset: 1px;
-  padding: 10px;
-  position: absolute;
-  z-index: 2;
-}
 .card > img {
   border-radius: inherit;
   height: 100%;
@@ -82,15 +44,6 @@
   margin-right: auto;
   width: 100%;
   text-align: center;
-}
-.card-title {
-  color: white;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  font-size: 2.25rem;
-  font-weight: 400;
-  margin-top: 3rem;
 }
 @media screen and (max-width: 700px) {
   .card {
@@ -108,7 +61,7 @@
   }
   #cards {
     margin-top: 2cm !important;
-    margin-bottom : 2cm !important;
+    margin-bottom: 2cm !important;
     display: flex !important;
     flex-direction: column !important;
   }
