--- a/1.mérföldkő/Styles/nav.css
+++ b/1.mérföldkő/Styles/nav.css
@@ -99,17 +99,15 @@ nav ul {
     align-self: center;
     margin-right: 1rem;
   }
-  ul:first-child {
+  nav > div {
     display: flex;
     justify-content: space-between;
     flex-direction: row !important;
     height: fit-content;
     width: 100%;
   }
-  ul:nth-child(2) {
+  ul {
     margin-top: 2rem;
-  }
-  ul:not(:first-child) {
     flex-direction: column;
     height: fit-content;
     margin: 0;
@@ -122,12 +120,12 @@ nav ul {
   }
 }
 @media screen and (min-width: 700px) {
-  ul:first-child {
+  nav > div {
     display: none;
   }
 }
 @media screen and (min-width: 800px) {
-  ul:first-child {
+  nav > div {
     display: block;
     order: 1;
     margin: auto;
