--- a/1.mérföldkő/Styles/nav.css
+++ b/1.mérföldkő/Styles/nav.css
@@ -22,17 +22,14 @@ nav ul {
   padding-left: 2rem;
   padding-right: 2rem;
 }
-/*.ham {
+.ham {
   display: none;
-}*/
-
-
-
+}
 .topnav li {
-  padding: 1rem 1.3rem;
+  padding: 1rem 1.4rem;
   height: 3.5rem;
   position: relative;
-  width: 100%;
+  width: 50%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -49,26 +46,6 @@ nav ul {
   font-weight: 500;
   color: var(--sarga);
 }
-
-#lgo {
-  text-align: center;
-  color: var(--sarga);
-  font-family: monospace;
-  font-weight: bold;
-  font-size: 2rem;
-  margin: 0;
-}
-
-#logo::after {
-  position: absolute;
-  content: "";
-  bottom: 0px;
-  left: 0;
-  width: 0;
-  height: 3px;
-  margin: 0 auto;
-}
-
 .topnav li::after {
   position: absolute;
   content: "";
@@ -79,7 +56,6 @@ nav ul {
   height: 3px;
   margin: 0 auto;
 }
-
 .topnav li:hover::after {
   width: 100%;
   transition: width .3s ease-in-out;
@@ -90,7 +66,14 @@ nav ul {
   color: var(--sarga);
 }
 
-
+.logo {
+  text-align: center;
+  color: var(--sarga);
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 2rem;
+  margin: 0;
+}
 
 @media screen and (max-width: 700px) {
   .topnav {
