--- a/1.mérföldkő/Styles/feladat.css
+++ b/1.mérföldkő/Styles/feladat.css
@@ -1,6 +1,6 @@
 .bg-img {
     background-image: url(../képek/lightbulb-g16c95b97f_1920.jpg);
-    min-height: 1500px;
+    min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
