--- a/1.mérföldkő/Styles/cards.css
+++ b/1.mérföldkő/Styles/cards.css
@@ -10,6 +10,10 @@
 #cards:hover > .card::after {
   opacity: 1;
 }
+.card-title{
+  color:white;
+ text-align: center;
+}
 
 .card {
   background-color: rgba(255, 255, 255, 0.1);
