--- a/Styles/feladatok.css
+++ b/Styles/feladatok.css
@@ -15,6 +15,8 @@
   border-width: 2px;
   border-color: black;
   border-style: solid;
+  border-radius: 5px;
+  height: fit-content;
 }
 .container > h1{
 margin-left:auto;
@@ -33,6 +35,8 @@ width:fit-content;
   border-width: 2px;
   border-color: black;
   border-style: solid;
+  border-radius: 5px;
+  position: relative;
 }
 .inputs {
   width: min-content;
@@ -74,7 +78,12 @@ form input {
   margin-left:2rem'
 }
 input[type="date"], input[type="submit"]{
+  outline: 0;
   width: fit-content;
+}
+input[type="date"]:target{
+  border-bottom: 2px;
+  border-color: black;
 }
 .task select {
   width: 10rem;
@@ -86,7 +95,7 @@ input[type="date"], input[type="submit"]{
 .task select:focus {
   outline: 0;
 }
-.task button[type="submit"] {
+.task butto[type="submit"] {
   color: black;
   width: 90%;
   align-content: center;
