--- a/Styles/felhasznalo.css
+++ b/Styles/felhasznalo.css
@@ -1,18 +1,20 @@
 .container {
   background-color:blanchedalmond;
   color: black;
-  width: 50%;
+  width: 60%;
   padding:3rem;
+  padding-top: 1rem;
   font-size: medium;
   margin-left: auto;
   margin-right: auto;
   margin-top: 2rem;
+  margin-bottom: 3rem;
   display: flex;
   flex-direction: column;
 }
 .container h2{
   text-align: center;
-  margin-right: 2rem;
+  margin-right: 2.2rem;
 }
 .name {
   display: flex;
@@ -26,7 +28,6 @@
   font-size: 1rem;
   font-family: monospace;
   font-weight: 500;
-  
 }
 
 .input_row {
@@ -36,9 +37,16 @@
   display: flex;
   flex-direction: column;
 }
+.input_row input[type]{
+  box-shadow: 0.5rem 0.5rem;
+  border-width: 2px;
+  border-color: black;
+  border-style: solid;
+  border-radius: 5px;
+}
 
 input {
-  position: relative;
+  /*position: relative;*/
   padding: 1rem;
   font-family: monospace;
   font-weight: 500;
@@ -47,10 +55,33 @@ input {
   border-color: black;
   background-color: transparent;
   width: 100%;
+  align-content: center;
 }
 input:focus {
   outline: none;
 }
+
+.profilkep{
+  width: 100%;
+  color: black;
+  padding: 0.5rem;
+  border: none;
+  
+}
+
+
+.profilkep input[type="submit"]{
+  width: 100%;
+  color: black;
+  box-shadow: 0.5rem 0.5rem;
+  border-width: 2px;
+  border-color: black;
+  border-style: solid;
+  border-radius: 5px;
+}
+
+
+
 @media screen and (max-width: 700px) {
   .container {
     width: 100%;
