--- a/Styles/form.css
+++ b/Styles/form.css
@@ -6,20 +6,20 @@
   background-size: cover;
 }
 .bg-signup {
-  background-image: url(../pics/bike2.jpg);
-  min-height: 100%;
+  background-image: url(../pics/bike3.jpg);
+  min-height: 850px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
 .form {
-  float: right;
-  right: 0;
-  margin-top: 4rem;
-  margin-bottom: 5rem;
-  margin-right: 1.3rem;
-  min-width: min-content;
-  max-width: 25vw;
+  position: relative;
+  top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  
+  min-width: 30%;
+  max-width: 35%;
   background-color: #1f1f21;
   font-family: monospace;
   color: #e3fc02;
@@ -33,7 +33,7 @@
     margin-top: 6rem;
     margin-bottom: 5rem;
     margin-right: 1.3rem;
-    max-width: 350px;
+    max-width: 35%;
     padding: 16px;
     background-color: #1f1f21;
     font-family: monospace;
