--- a/Styles/felhasznalo.css
+++ b/Styles/felhasznalo.css
@@ -70,7 +70,11 @@ input:focus {
   color: black;
   padding: 0.5rem;
   border: none;
-  
+}
+.profilkep img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
@@ -82,6 +86,7 @@ input:focus {
   border-color: black;
   border-style: solid;
   border-radius: 5px;
+  
 }
 
 
